# MYFINTECH

./: .gitignore  05xriassunto.md  06riassunto.md  Dataset2_Needs.xls  TASK.md  audit_report.md  blueprint.txt  main.py  phase3_audit_report.md  pyproject.toml  requirements.txt
Main_files/: 02_baselines.py  02b_catboost_lightgbm.py  02c_tabpfn_baseline.py  03b_boruta_shap.py  03c_deep_feature_synthesis.py  04_bayesian_optuna.py  04b_optuna_multiobjective.py  06b_tabnet_mtl.py  06c_pytorch_tabnet_ssl.py  07_xai_compliance.py  07b_dice_counterfactuals.py  08_recommender_system.py  08b_two_tower_recommender.py  11_plots.py
Main_x/: 01x_feature_engineering.py  03x_train_ebm_accumulation.py  05x_production_engine.py  06x_compliance_audit.py  Total_Glassbox_Pipeline.ipynb  eda.py  notebook_pipeline_x.ipynb
Main_y/: 03y_train_ebm_accumulation.py  04y_train_tabnet_income.py  07y_generate_comparison_tables.py  GPU_Runner_PipelineY.ipynb  utilsy.py
Main_z/: 01z_feature_engineering.py  02z_benchmark_baselines.py  04z_ensemble_validation.py  notebook_z.py  utilsz.py
OLD/: Dataset2_Needs_DFS.csv  README.md  Slides.md  report.md  report_riassunto.md
OLD/Main_files/: 01_eda.ipynb  03_grid_search_tuning.py  05_ensembles.py  05b_explainable_boosting_machine.py  06_neural_networks.py  09_statistical_significance.py  10_fairness_and_precision_at_k.py  GPU_Runner.ipynb  utils.py
OLD/Main_x/: 00x_freeze_dataset.py  02x_xgboost_calibrated.py  03x_train_ebm_income.py  07x_executive_dashboard.py  (+1 more)
configs/: config.yaml
tests/: test_engineer.py  test_loader.py  test_xgboost_model.py
(+132 files in other folders)
