[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "myfintech"
version = "1.0.0"
description = "SOTA modular quantitative finance ML pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core data stack
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    # Gradient boosting
    "xgboost>=2.0",
    "lightgbm>=4.0",
    # Hydra / config management
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    # Hyperparameter optimisation
    "optuna>=3.4",
    # Feature engineering
    "featuretools>=1.28",
    # Utilities
    "tabulate>=0.9",
    "openpyxl>=3.1",
    "xlrd>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "jupytext>=1.16",
]
xai = [
    "shap>=0.43",
    "lime>=0.2",
    "dice-ml>=0.11",
]
nn = [
    "torch>=2.1",
    "pytorch-tabnet>=4.1",
]

[project.scripts]
myfintech = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "main.py"]
